falco_plugin_api/src/ffi.rs

#[test]
fn bindgen_test_layout_ss_plugin_table_reader_vtable_ext() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_reader_vtable_ext> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_reader_vtable_ext>(),
        48usize,
        concat!("Size of: ", stringify!(ss_plugin_table_reader_vtable_ext))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_reader_vtable_ext>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(ss_plugin_table_reader_vtable_ext)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_name) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable_ext),
            "::",
            stringify!(get_table_name)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_size) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable_ext),
            "::",
            stringify!(get_table_size)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).get_table_entry) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable_ext),
            "::",
            stringify!(get_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).read_entry_field) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable_ext),
            "::",
            stringify!(read_entry_field)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).release_table_entry) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable_ext),
            "::",
            stringify!(release_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).iterate_entries) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_reader_vtable_ext),
            "::",
            stringify!(iterate_entries)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_table_writer_vtable {
    pub clear_table:
        ::std::option::Option<unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> ss_plugin_rc>,
    pub erase_table_entry: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            key: *const ss_plugin_state_data,
        ) -> ss_plugin_rc,
    >,
    pub create_table_entry: ::std::option::Option<
        unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> *mut ss_plugin_table_entry_t,
    >,
    pub destroy_table_entry: ::std::option::Option<
        unsafe extern "C" fn(t: *mut ss_plugin_table_t, e: *mut ss_plugin_table_entry_t),
    >,
    pub add_table_entry: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            key: *const ss_plugin_state_data,
            entry: *mut ss_plugin_table_entry_t,
        ) -> *mut ss_plugin_table_entry_t,
    >,
    pub write_entry_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            e: *mut ss_plugin_table_entry_t,
            f: *const ss_plugin_table_field_t,
            in_: *const ss_plugin_state_data,
        ) -> ss_plugin_rc,
    >,
}
#[test]
fn bindgen_test_layout_ss_plugin_table_writer_vtable() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_writer_vtable> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_writer_vtable>(),
        48usize,
        concat!("Size of: ", stringify!(ss_plugin_table_writer_vtable))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_writer_vtable>(),
        8usize,
        concat!("Alignment of ", stringify!(ss_plugin_table_writer_vtable))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).clear_table) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable),
            "::",
            stringify!(clear_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).erase_table_entry) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable),
            "::",
            stringify!(erase_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).create_table_entry) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable),
            "::",
            stringify!(create_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).destroy_table_entry) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable),
            "::",
            stringify!(destroy_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).add_table_entry) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable),
            "::",
            stringify!(add_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).write_entry_field) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable),
            "::",
            stringify!(write_entry_field)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_table_writer_vtable_ext {
    pub clear_table:
        ::std::option::Option<unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> ss_plugin_rc>,
    pub erase_table_entry: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            key: *const ss_plugin_state_data,
        ) -> ss_plugin_rc,
    >,
    pub create_table_entry: ::std::option::Option<
        unsafe extern "C" fn(t: *mut ss_plugin_table_t) -> *mut ss_plugin_table_entry_t,
    >,
    pub destroy_table_entry: ::std::option::Option<
        unsafe extern "C" fn(t: *mut ss_plugin_table_t, e: *mut ss_plugin_table_entry_t),
    >,
    pub add_table_entry: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            key: *const ss_plugin_state_data,
            entry: *mut ss_plugin_table_entry_t,
        ) -> *mut ss_plugin_table_entry_t,
    >,
    pub write_entry_field: ::std::option::Option<
        unsafe extern "C" fn(
            t: *mut ss_plugin_table_t,
            e: *mut ss_plugin_table_entry_t,
            f: *const ss_plugin_table_field_t,
            in_: *const ss_plugin_state_data,
        ) -> ss_plugin_rc,
    >,
}
#[test]
fn bindgen_test_layout_ss_plugin_table_writer_vtable_ext() {
    const UNINIT: ::std::mem::MaybeUninit<ss_plugin_table_writer_vtable_ext> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<ss_plugin_table_writer_vtable_ext>(),
        48usize,
        concat!("Size of: ", stringify!(ss_plugin_table_writer_vtable_ext))
    );
    assert_eq!(
        ::std::mem::align_of::<ss_plugin_table_writer_vtable_ext>(),
        8usize,
        concat!(
            "Alignment of ",
            stringify!(ss_plugin_table_writer_vtable_ext)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).clear_table) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable_ext),
            "::",
            stringify!(clear_table)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).erase_table_entry) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable_ext),
            "::",
            stringify!(erase_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).create_table_entry) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable_ext),
            "::",
            stringify!(create_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).destroy_table_entry) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable_ext),
            "::",
            stringify!(destroy_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).add_table_entry) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable_ext),
            "::",
            stringify!(add_table_entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).write_entry_field) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ss_plugin_table_writer_vtable_ext),
            "::",
            stringify!(write_entry_field)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ss_plugin_table_input {
    pub name: *const ::std::os::raw::c_char,
    pub key_type: ss_plugin_state_type,
    pub table: *mut ss_plugin_table_t,
    pub reader: ss_plugin_table_reader_vtable,
    pub writer: ss_plugin_table_writer_vtable,
    pub fields: ss_plugin_table_fields_vtable,
    pub reader_ext: *mut ss_plugin_table_reader_vtable_ext,
    pub writer_ext: *mut ss_plugin_table_writer_vtable_ext,
    pub fields_ext: *mut ss_plugin_table_fields_vtable_ext,
}
